# idle.cafe

./: .gitignore copy  README.md  package-lock.json  package.json  pelicanconf.py  pyproject.toml  requirements.txt  vercel.json
content/pages/: johnhellion.md  thomasjbevan.md
content/static-root/: manifest.json  robots.txt
output/: 404.html  api.js  index.html  internet-error.html  rss.xml  sitemap.xml
output/theme/: app.js  styles.css
theme/static/: fonts.css
theme/templates/: article.html  base.html  head.html  index.html  posts.html
