[tool.poetry]
name = "idle.cafe"
version = "0.1.0"
description = "Personal blog by John Hellion"
authors = ["John Hellion <hey@johnhellion.com>"]
license = "zlib License"

[tool.poetry.dependencies]
python = "^3.7"
pelican = "==4.2.0"
blinker = "==1.4"
docutils = "==0.16"
feedgenerator = "==1.9.1"
importlib-metadata = "==1.7.0"
python-dateutil = "==2.8.1"
pytz = "==2020.1"
six = "==1.15.0"
zipp = "==3.1.0"
Markdown = "==3.2.2"
Jinja2 = "==2.11.2"
MarkupSafe = "==1.1.1"
Pygments = "==2.6.1"
Unidecode = "==1.1.1"

[tool.poetry.dev-dependencies]
flake8 = "*"
autopep8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
